--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   provider: ^6.1.1
+  salomon_bottom_bar: ^3.3.2
 
 dev_dependencies:
   flutter_test:
